force-app/main/default/objects/Group_Class_Session__c/Group_Class_Session__c.object-meta.xml
<CustomObject>
    <description>ECM v1</description>
    <label>Group Service Entry</label>
    <nameField>
        <displayFormat>GroupServiceEntry-{0000}</displayFormat>
        <label>Group Service Entry #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Service Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>