force-app/main/default/objects/Group_Class_Session__c/fields/ECM_Service_Activity__c.field-meta.xml
<CustomField>
    <fullName>ECM_Service_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ECM Service Entry</label>
    <referenceTo>ECM_Service_Activity__c</referenceTo>
    <relationshipLabel>Group Service Entries</relationshipLabel>
    <relationshipName>Group_Class_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>