force-app/main/default/objects/Group_Class_Session__c/fields/Group_Class__c.field-meta.xml
<CustomField>
    <fullName>Group_Class__c</fullName>
    <label>Group-Class</label>
    <referenceTo>Group_Class__c</referenceTo>
    <relationshipName>Group_Class_Sessions1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>