force-app/main/default/objects/Group_Class_Session__c/fields/Group_Class_Available__c.field-meta.xml
<CustomField>
    <fullName>Group_Class_Available__c</fullName>
    <formula>Group_Class__r.Available__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Class Available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>