force-app/main/default/objects/Group_Class_Session__c/fields/Group_Class_Program__c.field-meta.xml
<CustomField>
    <fullName>Group_Class_Program__c</fullName>
    <formula>Group_Class__r.Program__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Class Program</label>
    <type>Text</type>
</CustomField>