force-app/main/default/objects/Group_Class_Session__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipName>Group_Class_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>