force-app/main/default/objects/Group_Class_Session__c/fields/Session_Date_TCP__c.field-meta.xml
<CustomField>
    <fullName>Session_Date_TCP__c</fullName>
    <label>Session Start Date</label>
    <type>Date</type>
</CustomField>