force-app/main/default/objects/Group_Class_Session__c/fields/Session_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Session_End_Date__c</fullName>
    <label>Session End Date</label>
    <type>Date</type>
</CustomField>