force-app/main/default/objects/Group_Class_Session__c/fields/Session_Length_in_minutes__c.field-meta.xml
<CustomField>
    <fullName>Session_Length_in_minutes__c</fullName>
    <label>Session Length (in minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>