force-app/main/default/objects/Group_Class_Session__c/fields/Session_Series__c.field-meta.xml
<CustomField>
    <fullName>Session_Series__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session Series</label>
    <referenceTo>Session_Series__c</referenceTo>
    <relationshipName>Group_Class_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>