force-app/main/default/objects/Group_Class_Session__c/fields/Session_Series_Assign_Event_To_ID__c.field-meta.xml
<CustomField>
    <fullName>Session_Series_Assign_Event_To_ID__c</fullName>
    <formula>Session_Series__r.Assign_Event_to__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Series Assign Event To ID</label>
    <type>Text</type>
</CustomField>