force-app/main/default/objects/Group_Class_Session__c/fields/Setup_Tear_Down_Time_hours__c.field-meta.xml
<CustomField>
    <fullName>Setup_Tear_Down_Time_hours__c</fullName>
    <description>Black Health requirement</description>
    <label>Setup / Tear Down Time (hours)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>