force-app/main/default/objects/Group_Class_Session__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Brag</fullName>
            </value>
            <value>
                <fullName>Brand Development</fullName>
            </value>
            <value>
                <fullName>Career Planning</fullName>
            </value>
            <value>
                <fullName>Common Interviewing Questions</fullName>
            </value>
            <value>
                <fullName>Computer Basics</fullName>
            </value>
            <value>
                <fullName>Conflict Management / Calling Tree</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Diversity Listening</fullName>
            </value>
            <value>
                <fullName>Effective Follow Up</fullName>
            </value>
            <value>
                <fullName>Effective Job Search</fullName>
            </value>
            <value>
                <fullName>Elevator Pitch</fullName>
            </value>
            <value>
                <fullName>Financial Literacy</fullName>
            </value>
            <value>
                <fullName>Forgiveness</fullName>
            </value>
            <value>
                <fullName>Interviewing Techniques</fullName>
            </value>
            <value>
                <fullName>Job Applications</fullName>
            </value>
            <value>
                <fullName>Love Exercise</fullName>
            </value>
            <value>
                <fullName>Microsoft Word</fullName>
            </value>
            <value>
                <fullName>Mirror Exercise</fullName>
            </value>
            <value>
                <fullName>Needs Assessment</fullName>
            </value>
            <value>
                <fullName>Online Applications</fullName>
            </value>
            <value>
                <fullName>Power of the Pause</fullName>
            </value>
            <value>
                <fullName>Professional Inventory</fullName>
            </value>
            <value>
                <fullName>Professionalism</fullName>
            </value>
            <value>
                <fullName>Questions to Ask the Interviewer</fullName>
            </value>
            <value>
                <fullName>Researching Potential employers</fullName>
            </value>
            <value>
                <fullName>Resume Writing</fullName>
            </value>
            <value>
                <fullName>Scavenger Hunt</fullName>
            </value>
            <value>
                <fullName>Strategic Job Search (SAM Assessments)</fullName>
            </value>
            <value>
                <fullName>Student Commitments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>